[REFACTOR] Fix based on sonarqube recommendations